--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       <div class="buttons">
         <img src="img/stop.png" alt="" onclick="watchStop()" />
         <img src="img/start.png" alt="" onclick="watchStart()" />
-        <img src="/img/reset.png" alt="" onclick="watchReset()" />
+        <img src="img/reset.png" alt="" onclick="watchReset()" />
         <script src="index.js"></script>
       </div>
     </div>
